xliff-22/test-suite/core/invalid/bad_YesCanReorderInEcForFirstNoInSc.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <segment>
    <source><sc id="1" canReorder="firstNo" canCopy="no" canDelete="no"/>text<ec startRef="1" canReorder="yes" canCopy="no" canDelete="no"/></source>
   </segment>
  </unit>
 </file>
</xliff>
